# udisksevt

./: .gitignore  Main.hs  Makefile  README  launch_ghci.sh  udisksevt.cabal  udisksevt.conf
UDisksEvt/: Config.hs  DBus.hs  Datatypes.hs  Disk.hs  Log.hs  UDisks.hs  Utils.hs
package-src/: PKGBUILD
